2001-12-07  Andrew Cagney  <ac131313@redhat.com>

	* ui-out.c (ui_out_table_begin): Initialize body_flag.
	(struct ui_out_table): New structure.  Move table fields to here.
	Rename headercurr to headernext.
	(struct ui_out): Remove table specific fields.  Add field table.
	(ui_out_table_begin, ui_out_table_body, ui_out_table_end): Update.
	(ui_out_table_header, ui_out_begin): Update.
	(verify_field_proper_position, verify_field_alignment): Update.
	(ui_out_new, clear_header_list, append_header_to_list): Update.
	(get_next_header): Rename get_curr_header.  Update comments and
	code.

2001-12-06  Andrew Cagney  <ac131313@redhat.com>

	* regcache.c (XCALLOC): Delete macro that should not have been
	added.

2001-12-07  Jiri Smid  <smid@suse.cz>

	* dwarf2cfi.c: New file.
	* dwarf2cfi.h: New file.
	* dwarf2read.c (dwarf_frame_offset, dwarf_frame_size): New variables.
	(dwarf_eh_frame_offset, dwarf_eh_frame_size): New variables.
	(dwarf2_read_section): Change to non static.
	(dwarf2_locate_sections): Add .debug_frame and .eh_frame section
	recognition.
	(FRAME_SECTION, EH_FRAME_SECTION): New define.
	* elfread.c (elf_symfile_read): Add call of frame informations build.
	* frame.h (frame_info): Add pointer to unwind_context.
	* symfile.h (dwarf2_build_frame_info): Add declaration.
	* gdbarch.sh (DWARF2_BUILD_FRAME_INFO): Add.
	* gdbarch.h, gdbarch.c: Regenerate.
	* Makefile.in: Add dwarf2cfi_h, dwarf2cfi.o
	* x86-64-tdep.c (i386_gdbarch_init): Initialize target vector to
	use debug frame info.

2001-12-06  Andrew Cagney  <ac131313@redhat.com>

	* defs.h: Do not include "mmalloc.h".
	(mcalloc, mmalloc, mrealloc, mfree): Delete declaration.
	* objfiles.c: Include "mmalloc.h".
	* utils.c: Include "mmalloc.h".
	(mmalloc, mfree, mrealloc, mmalloc): Make static, change PTR to
	void pointer.
	
2001-12-06  Andrew Cagney  <ac131313@redhat.com>

	* regcache.c (store_register, fetch_register): Only use
	fetch/store pseudo-register when function is present.  Assume